testing target blank on links

--- a/index.html
+++ b/index.html
@@ -434,22 +434,23 @@
             README<span class="text-gray-light">.md</span>
           </div>
         </div>
-        <article class="markdown-body entry-content container-lg f5"><h2 id="links">Links</h2>
+        <article class="markdown-body entry-content container-lg f5"><p>(Opens in a new window)</p>
+<h2 id="links">Links</h2>
 <ul>
-<li><a href="https://tryhackme.com/p/AKjers">TryHackMe</a></li>
-<li><a href="https://www.github.com/kjersheim">Github</a></li>
-<li><a href="https://www.linkedin.com/in/kjersheim">Linkedin</a></li>
-<li><a href="https://bsky.app/profile/kjers.bsky.social">Bluesky</a></li>
+<li><a href="https://tryhackme.com/p/AKjers">TryHackMe</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://www.github.com/kjersheim">Github</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://www.linkedin.com/in/kjersheim">Linkedin</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://bsky.app/profile/kjers.bsky.social">Bluesky</a>{:target=&quot;_blank&quot;}</li>
 </ul>
 <h2 id="tools">Tools</h2>
 <ul>
-<li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
-<li><a href="https://www.duckdns.org/">DuckDNS</a></li>
-<li><a href="https://devdocs.io/">DevDocs</a></li>
-<li><a href="https://math.typeit.org/">Math Symbols</a></li>
-<li><a href="https://www.bigocheatsheet.com/">Big-O Cheatsheet</a></li>
-<li><a href="https://www.wolframalpha.com/">WolframAlpha</a></li>
-<li><a href="https://jodies.de/ipcalc">IP Calculator</a></li>
+<li><a href="https://gchq.github.io/CyberChef/">CyberChef</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://www.duckdns.org/">DuckDNS</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://devdocs.io/">DevDocs</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://math.typeit.org/">Math Symbols</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://www.bigocheatsheet.com/">Big-O Cheatsheet</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://www.wolframalpha.com/">WolframAlpha</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://jodies.de/ipcalc">IP Calculator</a>{:target=&quot;_blank&quot;}</li>
 </ul>
 </article>
       </div>
