--- a/readme/index.html
+++ b/readme/index.html
@@ -22,7 +22,7 @@
     
     <meta name="description"
   content="(Opens in a new window)
-Links TryHackMe{:target=&quot;_blank&quot;} Github{:target=&quot;_blank&quot;} Linkedin{:target=&quot;_blank&quot;} Bluesky{:target=&quot;_blank&quot;} Tools CyberChef{:target=&quot;_blank&quot;} DuckDNS{:target=&quot;_blank&quot;} DevDocs{:target=&quot;_blank&quot;} Math Symbols{:target=&quot;_blank&quot;} Big-O Cheatsheet{:target=&quot;_blank&quot;} WolframAlpha{:target=&quot;_blank&quot;} IP Calculator{:target=&quot;_blank&quot;} " />
+Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Symbols Big-O Cheatsheet WolframAlpha IP Calculator " />
 <meta name="keywords"
   content='' />
 <meta name="robots" content="noodp" />
@@ -33,7 +33,7 @@ Links TryHackMe{:target=&quot;_blank&quot;} Github{:target=&quot;_blank&quot;} L
 <meta name="twitter:title" content="Readme - Kjersheim - Projects &amp; Docs" />
 <meta name="twitter:description"
   content="(Opens in a new window)
-Links TryHackMe{:target=&quot;_blank&quot;} Github{:target=&quot;_blank&quot;} Linkedin{:target=&quot;_blank&quot;} Bluesky{:target=&quot;_blank&quot;} Tools CyberChef{:target=&quot;_blank&quot;} DuckDNS{:target=&quot;_blank&quot;} DevDocs{:target=&quot;_blank&quot;} Math Symbols{:target=&quot;_blank&quot;} Big-O Cheatsheet{:target=&quot;_blank&quot;} WolframAlpha{:target=&quot;_blank&quot;} IP Calculator{:target=&quot;_blank&quot;} " />
+Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Symbols Big-O Cheatsheet WolframAlpha IP Calculator " />
 <meta name="twitter:site" content="https://kjersheim.github.io/" />
 <meta name="twitter:creator" content="" />
 <meta name="twitter:image"
@@ -44,7 +44,7 @@ Links TryHackMe{:target=&quot;_blank&quot;} Github{:target=&quot;_blank&quot;} L
 <meta property="og:title" content="Readme - Kjersheim - Projects &amp; Docs">
 <meta property="og:description"
   content="(Opens in a new window)
-Links TryHackMe{:target=&quot;_blank&quot;} Github{:target=&quot;_blank&quot;} Linkedin{:target=&quot;_blank&quot;} Bluesky{:target=&quot;_blank&quot;} Tools CyberChef{:target=&quot;_blank&quot;} DuckDNS{:target=&quot;_blank&quot;} DevDocs{:target=&quot;_blank&quot;} Math Symbols{:target=&quot;_blank&quot;} Big-O Cheatsheet{:target=&quot;_blank&quot;} WolframAlpha{:target=&quot;_blank&quot;} IP Calculator{:target=&quot;_blank&quot;} " />
+Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Symbols Big-O Cheatsheet WolframAlpha IP Calculator " />
 <meta property="og:url" content="https://kjersheim.github.io/readme/" />
 <meta property="og:site_name" content="Readme" />
 <meta property="og:image"
@@ -200,20 +200,20 @@ Links TryHackMe{:target=&quot;_blank&quot;} Github{:target=&quot;_blank&quot;} L
                 <article class="markdown-body entry-content container-lg"><p>(Opens in a new window)</p>
 <h2 id="links">Links</h2>
 <ul>
-<li><a href="https://tryhackme.com/p/AKjers">TryHackMe</a>{:target=&quot;_blank&quot;}</li>
-<li><a href="https://www.github.com/kjersheim">Github</a>{:target=&quot;_blank&quot;}</li>
-<li><a href="https://www.linkedin.com/in/kjersheim">Linkedin</a>{:target=&quot;_blank&quot;}</li>
-<li><a href="https://bsky.app/profile/kjers.bsky.social">Bluesky</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://tryhackme.com/p/AKjers">TryHackMe</a></li>
+<li><a href="https://www.github.com/kjersheim">Github</a></li>
+<li><a href="https://www.linkedin.com/in/kjersheim">Linkedin</a></li>
+<li><a href="https://bsky.app/profile/kjers.bsky.social">Bluesky</a></li>
 </ul>
 <h2 id="tools">Tools</h2>
 <ul>
-<li><a href="https://gchq.github.io/CyberChef/">CyberChef</a>{:target=&quot;_blank&quot;}</li>
-<li><a href="https://www.duckdns.org/">DuckDNS</a>{:target=&quot;_blank&quot;}</li>
-<li><a href="https://devdocs.io/">DevDocs</a>{:target=&quot;_blank&quot;}</li>
-<li><a href="https://math.typeit.org/">Math Symbols</a>{:target=&quot;_blank&quot;}</li>
-<li><a href="https://www.bigocheatsheet.com/">Big-O Cheatsheet</a>{:target=&quot;_blank&quot;}</li>
-<li><a href="https://www.wolframalpha.com/">WolframAlpha</a>{:target=&quot;_blank&quot;}</li>
-<li><a href="https://jodies.de/ipcalc">IP Calculator</a>{:target=&quot;_blank&quot;}</li>
+<li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
+<li><a href="https://www.duckdns.org/">DuckDNS</a></li>
+<li><a href="https://devdocs.io/">DevDocs</a></li>
+<li><a href="https://math.typeit.org/">Math Symbols</a></li>
+<li><a href="https://www.bigocheatsheet.com/">Big-O Cheatsheet</a></li>
+<li><a href="https://www.wolframalpha.com/">WolframAlpha</a></li>
+<li><a href="https://jodies.de/ipcalc">IP Calculator</a></li>
 </ul>
 </article>
               </div>
