removing sentence readme

--- a/index.html
+++ b/index.html
@@ -434,8 +434,7 @@
             README<span class="text-gray-light">.md</span>
           </div>
         </div>
-        <article class="markdown-body entry-content container-lg f5"><p>(Opens in a new window)</p>
-<h2 id="links">Links</h2>
+        <article class="markdown-body entry-content container-lg f5"><h2 id="links">Links</h2>
 <ul>
 <li><a href="https://tryhackme.com/p/AKjers">TryHackMe</a></li>
 <li><a href="https://www.github.com/kjersheim">Github</a></li>
