--- a/readme/index.html
+++ b/readme/index.html
@@ -21,8 +21,7 @@
 
     
     <meta name="description"
-  content="(Opens in a new window)
-Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Symbols Big-O Cheatsheet WolframAlpha IP Calculator " />
+  content="Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Symbols Big-O Cheatsheet WolframAlpha IP Calculator " />
 <meta name="keywords"
   content='' />
 <meta name="robots" content="noodp" />
@@ -32,8 +31,7 @@ Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Sym
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Readme - Kjersheim - Projects &amp; Docs" />
 <meta name="twitter:description"
-  content="(Opens in a new window)
-Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Symbols Big-O Cheatsheet WolframAlpha IP Calculator " />
+  content="Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Symbols Big-O Cheatsheet WolframAlpha IP Calculator " />
 <meta name="twitter:site" content="https://kjersheim.github.io/" />
 <meta name="twitter:creator" content="" />
 <meta name="twitter:image"
@@ -43,8 +41,7 @@ Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Sym
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Readme - Kjersheim - Projects &amp; Docs">
 <meta property="og:description"
-  content="(Opens in a new window)
-Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Symbols Big-O Cheatsheet WolframAlpha IP Calculator " />
+  content="Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Symbols Big-O Cheatsheet WolframAlpha IP Calculator " />
 <meta property="og:url" content="https://kjersheim.github.io/readme/" />
 <meta property="og:site_name" content="Readme" />
 <meta property="og:image"
@@ -185,7 +182,7 @@ Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Sym
                         </div>
                       </div>
                     </details-menu>
-                      21 Words
+                      16 Words
                     
 
                   </div>
@@ -197,8 +194,7 @@ Links TryHackMe Github Linkedin Bluesky Tools CyberChef DuckDNS DevDocs Math Sym
 
 
               <div class="Box-body px-5 pb-5" style="z-index: 1">
-                <article class="markdown-body entry-content container-lg"><p>(Opens in a new window)</p>
-<h2 id="links">Links</h2>
+                <article class="markdown-body entry-content container-lg"><h2 id="links">Links</h2>
 <ul>
 <li><a href="https://tryhackme.com/p/AKjers">TryHackMe</a></li>
 <li><a href="https://www.github.com/kjersheim">Github</a></li>
