--- a/index.html
+++ b/index.html
@@ -436,20 +436,20 @@
         </div>
         <article class="markdown-body entry-content container-lg f5"><h2 id="links">Links</h2>
 <ul>
-<li><a href="https://tryhackme.com/p/AKjers">TryHackMe</a></li>
-<li><a href="https://www.github.com/kjersheim">Github</a></li>
-<li><a href="https://www.linkedin.com/in/kjersheim">Linkedin</a></li>
-<li><a href="https://bsky.app/profile/kjers.bsky.social">Bluesky</a></li>
+<li><a href="https://tryhackme.com/p/AKjers" target="_blank" rel="noopener noreferrer">TryHackMe</a></li>
+<li><a href="https://www.github.com/kjersheim" target="_blank" rel="noopener noreferrer">Github</a></li>
+<li><a href="https://www.linkedin.com/in/kjersheim" target="_blank" rel="noopener noreferrer">Linkedin</a></li>
+<li><a href="https://bsky.app/profile/kjers.bsky.social" target="_blank" rel="noopener noreferrer">Bluesky</a></li>
 </ul>
 <h2 id="tools">Tools</h2>
 <ul>
-<li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
-<li><a href="https://www.duckdns.org/">DuckDNS</a></li>
-<li><a href="https://devdocs.io/">DevDocs</a></li>
-<li><a href="https://math.typeit.org/">Math Symbols</a></li>
-<li><a href="https://www.bigocheatsheet.com/">Big-O Cheatsheet</a></li>
-<li><a href="https://www.wolframalpha.com/">WolframAlpha</a></li>
-<li><a href="https://jodies.de/ipcalc">IP Calculator</a></li>
+<li><a href="https://gchq.github.io/CyberChef/" target="_blank" rel="noopener noreferrer">CyberChef</a></li>
+<li><a href="https://www.duckdns.org/" target="_blank" rel="noopener noreferrer">DuckDNS</a></li>
+<li><a href="https://devdocs.io/" target="_blank" rel="noopener noreferrer">DevDocs</a></li>
+<li><a href="https://math.typeit.org/" target="_blank" rel="noopener noreferrer">Math Symbols</a></li>
+<li><a href="https://www.bigocheatsheet.com/" target="_blank" rel="noopener noreferrer">Big-O Cheatsheet</a></li>
+<li><a href="https://www.wolframalpha.com/" target="_blank" rel="noopener noreferrer">WolframAlpha</a></li>
+<li><a href="https://jodies.de/ipcalc" target="_blank" rel="noopener noreferrer">IP Calculator</a></li>
 </ul>
 </article>
       </div>
