adding buffer-overflow article

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </path>
               </svg>
               Posts
-              <span class="Counter">27</span>
+              <span class="Counter">28</span>
             </a>
           </nav>
           <div class="profile-color-modes js-promo-color-modes-banner-profile isInitialToggle">
@@ -401,7 +401,7 @@
         </path>
       </svg>
       Posts
-      <span class="Counter ">27</span>
+      <span class="Counter ">28</span>
     </a>
   </nav>
 </div>
@@ -585,14 +585,14 @@
                       d="M2 2.5A2.5 2.5 0 014.5 0h8.75a.75.75 0 01.75.75v12.5a.75.75 0 01-.75.75h-2.5a.75.75 0 110-1.5h1.75v-2h-8a1 1 0 00-.714 1.7.75.75 0 01-1.072 1.05A2.495 2.495 0 012 11.5v-9zm10.5-1V9h-8c-.356 0-.694.074-1 .208V2.5a1 1 0 011-1h8zM5 12.25v3.25a.25.25 0 00.4.2l1.45-1.087a.25.25 0 01.3 0L8.6 15.7a.25.25 0 00.4-.2v-3.25a.25.25 0 00-.25-.25h-3.5a.25.25 0 00-.25.25z">
                     </path>
                   </svg>
-                  <a class="text-bold flex-auto min-width-0" href="https://kjersheim.github.io/post/mrrobot/">
-                    <span class="repo" title="MrRobot-1 VulnHub Challenge – Full Walkthrough">MrRobot-1 VulnHub Challenge – Full Walkthrough</span>
+                  <a class="text-bold flex-auto min-width-0" href="https://kjersheim.github.io/post/buffer-overflow/">
+                    <span class="repo" title="Buffer overflow analysis: stack_1">Buffer overflow analysis: stack_1</span>
                   </a>
                 </div>
 
 
                 <div name="summary" class="pinned-item-desc text-gray text-small d-block mt-2 mb-3">
-                  A full penetration test walkthrough of the MrRobot-1 VM from VulnHub, including network setup, enumeration, brute force login with Hydra, exploitation via reverse shell, privilege escalation, and root flag discovery.
+                  Exploring an executable through linux and windows, using IDA community edition
                 </div>
 
                 <p class="mb-0 f6 text-gray">
@@ -613,14 +613,14 @@
                       d="M2 2.5A2.5 2.5 0 014.5 0h8.75a.75.75 0 01.75.75v12.5a.75.75 0 01-.75.75h-2.5a.75.75 0 110-1.5h1.75v-2h-8a1 1 0 00-.714 1.7.75.75 0 01-1.072 1.05A2.495 2.495 0 012 11.5v-9zm10.5-1V9h-8c-.356 0-.694.074-1 .208V2.5a1 1 0 011-1h8zM5 12.25v3.25a.25.25 0 00.4.2l1.45-1.087a.25.25 0 01.3 0L8.6 15.7a.25.25 0 00.4-.2v-3.25a.25.25 0 00-.25-.25h-3.5a.25.25 0 00-.25.25z">
                     </path>
                   </svg>
-                  <a class="text-bold flex-auto min-width-0" href="https://kjersheim.github.io/post/badstore-walkthrough/">
-                    <span class="repo" title="BadStore.net Security Challenge: An Investigative Walkthrough">BadStore.net Security Challenge: An Investigative Walkthrough</span>
+                  <a class="text-bold flex-auto min-width-0" href="https://kjersheim.github.io/post/mrrobot/">
+                    <span class="repo" title="MrRobot-1 VulnHub Challenge – Full Walkthrough">MrRobot-1 VulnHub Challenge – Full Walkthrough</span>
                   </a>
                 </div>
 
 
                 <div name="summary" class="pinned-item-desc text-gray text-small d-block mt-2 mb-3">
-                  Exploring enumeration, SQL injection, privilege escalation, and web security weaknesses through a methodical analysis of the vulnerable BadStore.net web app.
+                  A full penetration test walkthrough of the MrRobot-1 VM from VulnHub, including network setup, enumeration, brute force login with Hydra, exploitation via reverse shell, privilege escalation, and root flag discovery.
                 </div>
 
                 <p class="mb-0 f6 text-gray">
@@ -658,6 +658,12 @@
   "title": "Synergy%20Project%20Plan,%20future%20factory%202023",
   "link": "https://kjersheim.github.io/post/ff-synergy-projectplan/",
   "publishDate": "2024-02-19%2000:00:00"
+},
+
+{
+  "title": "Buffer%20overflow%20analysis:%20stack_1",
+  "link": "https://kjersheim.github.io/post/buffer-overflow/",
+  "publishDate": "2024-01-25%2000:00:00"
 },
 
 {
